# ccxt_order

./: README.md  pyproject.toml
ccxt_order/: ccxt_order.py
tests/: test_market_order_future.py  test_market_order_spot.py
